ajustement css responsive smartphone typo

--- a/style.css
+++ b/style.css
@@ -1406,7 +1406,7 @@ label {
     text-align: right;
 }
 
-.btn-suurccess {
+.btn-success {
     border: none;
     color: #fff;
     background-color: #DE584D;
